--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "starter",
   "version": "1.0.0",
-  "main": "src/index.ts",
+  "main": "index.ts",
   "license": "MIT",
   "scripts": {
     "dev": "tsnd src/index.ts",
     "lint": "eslint src/**/*.ts",
-    "build": "babel src -d dist"
+    "build": "babel ./src -d dist",
+    "start": "tsnd dist"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
