--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "tsnd src/index.ts",
     "lint": "eslint src/**/*.ts",
     "build": "babel ./src -d dist",
-    "start": "tsnd dist"
+    "start": "node"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
