--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "tsnd src/index.ts",
     "lint": "eslint src/**/*.ts",
-    "build": "babel src -d dist",
-    "start": "node dist"
+    "start": "node dist",
+    "build": "babel ./src src/index.ts -d dist"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
