--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./src", "./dist"]
+  "include": ["./src"]
 }
