--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only src/index.ts",
+    "dev": "ts-node-dev src/index.ts",
     "lint": "eslint src/**/*.ts",
     "start": "NODE_ENV=production node dist",
     "build": "babel src/index.ts -d dist"
@@ -20,7 +20,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
-    "mongoose": "^5.11.18"
+    "mongoose": "^5.11.18",
+    "ts-node": "^9.1.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
