--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "mongoose": "^5.11.18",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
@@ -39,7 +40,6 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1",
-    "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.2"
+     "typescript": "^4.2.2"
   }
 }
